[2단계 - 블랙잭(베팅)] 잉(유영우) 미션 제출합니다.  (#363)
* docs: 기능 목록 작성

* feat: 연료 주입 미션 완료

* docs: 연료주입 기능 목록 체크

* docs: 기능 목록 작성

* feat: Card 생성

* feat: 카드 하나 뽑는 기능

* feat: 카드 중복 검증 기능

* feat: 딜러가 카드 나눠주는 기능

* refactor: 의도된 숫자 생성기 로직 변경

여러개 처리할수 있게 변경

* refactor: 인스턴스 변수 추가

* refactor: 매직넘버 상수로 포장

* feat: 카드 받는 기능 추가

* docs: 기능 목록 수정

* refactor: 중복확인 로직 변경

* feat: 초기 카드 분배 기능 추가

* feat: 추가 카드 분배 기능 추가

* feat: 승패 결과 계산 기능 추가

* docs: 기능 목록 수정

* fix: 카드 개수 오입력으로 인한 버그 수정

* feat: input뷰 구현

* feat: output뷰 구현

* feat: 컨트롤러 구현

* style: 패키지분리

* docs: 기능 목록 수정

* refactor: isWin() Wrapper class 내장 함수 이용하는 것으로 수정

* refactor: RandomNumberGenerator 싱글톤 적용

* refactor: Dealer cards final 처리

* refactor: PlayerRepository로 Players 책임 위임

* style: test용 class test패키지로 이동

* refactor: InputView 상수처리 및 정크 코드 정리

* refactor: Person에 이름에 대한 책임 위임

* fix: 흩어진 승패 정하는 로직 ScoreBoard에 위임

* refactor: OutputView 상수화 처리 및 정크 코드 정리

* style: convention 적용

* refactor: controller 메서드 분리

* style: Blackjack, PlayerRepository 메서드 명 변경

* style: 전략 패키지 분리

* test: ScoreBoardTest 수정

* refactor: 공백 view 책임으로 위임

* refactor: cards static화

* feat: 예외 사항 처리

* docs: 기능 목록 수정

* fix: 이름에 trim() 적용

* style: 필요없는 import 제거

* fix: 딜러 카드 추가 메시지 hit일 때만 호출되게 수정

* fix: OutputView 쓸데 없는 공백 제거

* feat: 블랙잭 21 초과 버스트 처리 기능 추가

* docs: 기능 목록 기능 추가

* fix: 플레이어들에게 카드 추가할지 물어보고 딜러 힛인지 판별 하도록 수정

* feat: Score 점수 계산 로직 클래스 생성, A 점수 처리 로직 추가

* docs: 기능 목록 기능 추가

* refactor: Score class 적용

* feat: Person.score() 메서드 생성

* refactor: 승패관련 로직담당할 Record 클래스 생성

* refactor: Blackjack, OutputView에 Record class 적용

* refactor: 안쓰는 메서드 정리

* refactor: 안쓰는 클래스 제거

* test: Record 테스트 작성

* refactor: record에 모든 전적기능 통합

* refactor: Record 일부 기능 Records 클래스에 위임

* test: Records 테스트 작성

* refactor: PlayerRepository 이름 변경 -> Players 로직 변경

* refactor: Card, Cards 구조 및 로직 변경

* fix: Oupu